Fix pill size on small screens

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -109,11 +109,11 @@ nav.navbar {
 .nav-pills {
 	.nav-link {
 		@include auto-transition((color, background));
-		padding: $nav-link-button-p;
+		padding: $nav-link-button-p !important;
 
 		&:active, &:hover, &.active {
 			border: $nav-link-button-hover-border;
-			padding: $nav-link-button-p-hover;
+			padding: $nav-link-button-p-hover !important;
 			color: $nav-link-button-fg;
 			background: $nav-link-button-bg-hover;
 		}
