--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -99,10 +99,10 @@ $conference-chevron-translate-y: -0.15em;
 $conference-expanded-bg: rgba(darken($body-bg, 20%), .15);
 
 $nav-link-button-fg: $primary;
-$nav-link-button-p: 7px;
+$nav-link-button-p: 10px 15px;
 $nav-link-button-hover-border: 3px solid $primary;
 $nav-link-button-bg-hover: transparent;
-$nav-link-button-p-hover: 4px;
+$nav-link-button-p-hover: 7px 12px;
 
 $sc-person-bg: rgba(#fff, 0.4);
 
